<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
  	    android:id="@+id/employer_email_label"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:text="@string/employer_email_label"
  	    android:textAppearance="?android:attr/textAppearanceMedium" />

  	<EditText
  	    android:id="@+id/change_employer_email"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content" />

  	<TextView
  	    android:id="@+id/hourly_wage_label"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:text="@string/hourly_wage_label"
  	    android:textAppearance="?android:attr/textAppearanceMedium" />

  	<EditText
  	    android:id="@+id/change_hourly_wage"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:textAppearance="?android:attr/textAppearanceMedium" />

  	<TextView
  	    android:id="@+id/tax_label"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:text="@string/tax_label"
  	    android:textAppearance="?android:attr/textAppearanceMedium" />

  	<EditText
  	    android:id="@+id/change_tax"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:textAppearance="?android:attr/textAppearanceMedium" />

  	<Button
  	    android:id="@+id/button_save_details"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:text="@string/button_save_details"
  	    android:onClick="saveDetails" />

  	<Button
  	    android:id="@+id/button_cancel"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:text="@string/button_cancel_details" />
  	
  	

</LinearLayout>
