<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$AddShiftFragment" >

    <ImageView
        android:id="@+id/headerChangePage"
        android:src="@drawable/change_shift_header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:background="#0094FF"
        android:contentDescription="@string/app_name" />
    
    <TimePicker
        android:id="@+id/changeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textShiftFrom"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textShiftFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/headerChangePage"
        android:text="@string/description_shift_from"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textShiftTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeFrom"
        android:layout_centerHorizontal="true"
        android:text="@string/description_shift_to"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TimePicker
        android:id="@+id/changeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textShiftTo"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/changeRepeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changeTo"
        android:layout_below="@+id/changeTo"
        android:text="@string/box_repeats" />

    <CheckBox
        android:id="@+id/changeNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changeRepeats"
        android:layout_below="@+id/changeRepeats"
        android:text="@string/box_notify" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changeOk"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:onClick="Save_Click"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/button_save_change" />

        <Button
            android:id="@+id/changeCancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:onClick="Cancel_Click"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/button_cancel_change" />
    </LinearLayout>

</RelativeLayout>